update swagger docs and api for updating
