# backend/internal/api/hotel_ser.go
@@ -38,16 +38,17 @@ func (h *HotelHandler) RegisterRoutes(g *echo.Group) {
 // @Accept application/json
 // @Produce application/json
 // @tags HotelServices
+// @Param   BookingPayload body types.BookingPayload true "Booking payload"
 // @Success 201
 // @Failure 400
 // @Failure 500
-// @Router /api/hotel/client/booking [post]
+// @Router /hotel/client/booking [post]
 // @Security BearerAuth
 func (h *HotelHandler) handleBookHotelService(c echo.Context) error {
 	s := types.BookingPayload{}
 	err := c.Bind(&s)
 	if err != nil {
-		return utils.HandleError(c, http.StatusBadRequest, "Booking detail not correct", err)
+		return utils.HandleError(c, http.StatusBadRequest, "booking detail not correct", err)
 	}
 
 	status, err_str, err := h.bookingServiceIn.BookHotelService(s)
@@ -55,7 +56,7 @@ func (h *HotelHandler) handleBookHotelService(c echo.Context) error {
 		return utils.HandleError(c, status, err_str.Error(), err)
 	}
 
-	return c.JSON(http.StatusCreated, "Booking success")
+	return c.JSON(http.StatusCreated, "booking success")
 }
 
 // @Summary		Get Hotel Service Hotel
@@ -67,7 +68,7 @@ func (h *HotelHandler) handleBookHotelService(c echo.Context) error {
 // @Success 200
 // @Failure 400
 // @Failure 500
-// @Router /api/hotel/{id}/{status} [get]
+// @Router /hotel/{id}/{status} [get]
 // @Security BearerAuth
 func (h *HotelHandler) handleGetAllHotelServiceByHotel(c echo.Context) error {
 	id := c.Param("id")
@@ -94,19 +95,19 @@ func (h *HotelHandler) handleGetAllHotelServiceByHotel(c echo.Context) error {
 // @Success 200
 // @Failure 400
 // @Failure 500
-// @Router /api/hotel/client/{id}/{status} [get]
+// @Router /hotel/client/{id}/{status} [get]
 // @Security BearerAuth
 func (h *HotelHandler) handleGetAllHotelServiceByUser(c echo.Context) error {
 	id := c.Param("id")
 	user_id, err := utils.ConvertTypeToUint(id)
 	if err != nil {
-		return c.String(http.StatusBadRequest, err.Error())
+		return utils.HandleError(c, http.StatusBadRequest, "user information is not correct", err)
 	}
 	status := c.Param("status")
 
 	ser_info, err := h.bookingServiceIn.GetAllBookingHotelByUser(user_id, status)
 	if err != nil {
-		return c.String(http.StatusInternalServerError, err.Error())
+		return utils.HandleError(c, http.StatusInternalServerError, "falied to get reservation history", err)
 	}
 
 	return c.JSON(http.StatusOK, ser_info)
@@ -120,18 +121,18 @@ func (h *HotelHandler) handleGetAllHotelServiceByUser(c echo.Context) error {
 // @Success 200
 // @Failure 400
 // @Failure 500
-// @Router /api/hotel/{id} [get]
+// @Router /hotel/{id} [get]
 // @Security BearerAuth
 func (h *HotelHandler) handleGetHotelService(c echo.Context) error {
 	str := c.Param("id")
 	id, err := utils.ConvertTypeToUint(str)
 	if err != nil {
-		return c.String(http.StatusBadRequest, err.Error())
+		return utils.HandleError(c, http.StatusBadRequest, "hotel information is not correct", err)
 	}
 
 	ser_info, err := h.bookingServiceIn.GetBookingHotel(id)
 	if err != nil {
-		return c.String(http.StatusInternalServerError, err.Error())
+		return utils.HandleError(c, http.StatusInternalServerError, "falied to get reservation history", err)
 	}
 
 	return c.JSON(http.StatusOK, ser_info)
@@ -142,10 +143,11 @@ func (h *HotelHandler) handleGetHotelService(c echo.Context) error {
 // @Produce application/json
 // @tags HotelServices
 // @Param id path string true "Hotel Service ID"
+// @Param   SelectStatusPayload body types.SelectStatusPayload true "SelectStatus payload"
 // @Success 200
 // @Failure 400
 // @Failure 500
-// @Router /api/hotel/{id} [put]
+// @Router /hotel/{id} [put]
 // @Security BearerAuth
 func (h *HotelHandler) handleAcceptRejectBookHotel(c echo.Context) error {
 	sel := types.SelectStatusPayload{}
@@ -167,10 +169,11 @@ func (h *HotelHandler) handleAcceptRejectBookHotel(c echo.Context) error {
 // @Produce application/json
 // @tags HotelServices
 // @Param id path string true "Hotel Service ID"
+// @Param   RefundPayload body types.RefundPayload true "Refund payload"
 // @Success 200
 // @Failure 400
 // @Failure 500
-// @Router /api/hotel/cleint/{id} [put]
+// @Router /hotel/cleint/{id} [put]
 // @Security BearerAuth
 func (h *HotelHandler) handleManageRefundBookHotel(c echo.Context) error {
 	payload := types.RefundPayload{}
@@ -192,10 +195,11 @@ func (h *HotelHandler) handleManageRefundBookHotel(c echo.Context) error {
 // @Produce application/json
 // @tags HotelServices
 // @Param id path string true "Hotel Service ID"
+// @Param   ReviewPayload body types.ReviewPayload true "Review payload"
 // @Success 200
 // @Failure 400
 // @Failure 500
-// @Router /api/hotel/client/review/{id} [put]
+// @Router /hotel/client/review/{id} [put]
 // @Security BearerAuth
 func (h *HotelHandler) handleReviewHotelService(c echo.Context) error {
 	payload := types.ReviewPayload{}
